--- a/ORM-Dapper/appsettings.json
+++ b/ORM-Dapper/appsettings.json
@@ -1,10 +1,11 @@
 {
-  "exclude": [
-    "**/bin",
-    "**/bower_components",
-    "**/jspm_packages",
-    "**/node_modules",
-    "**/obj",
-    "**/platforms"
-  ]
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=bestbuy;uid=root;Pwd=password;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
